@@ -1,3 +1,10 @@
+2016-01-26  Abderrazek Zaafrani  <a.zaafrani@samsung.com>
+            Sebastian Pop  <s.pop@samsung.com>
+
+	* graphite-isl-ast-to-gimple.c (ternary_op_to_tree): Handle
+	isl_ast_op_cond and isl_ast_op_select.
+	(gcc_expression_from_isl_expr_op): Same.
+
 2016-01-26  Jason Merrill  <jason@redhat.com>
 
 	PR c++/68782
